--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.0",
     "@material-tailwind/react": "^1.2.4",
+    "@stripe/stripe-js": "^1.42.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "tailwindcss": "^3.2.1"
   }
 }
